--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  text-align: center;
 }
 
+/* Classes */
 .full-width-card {
   background-color:#2f2f2f;
   border-style: solid;
@@ -14,13 +14,41 @@
 .horizontal-items {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+}
+
+.text-center{
+  text-align: center;
+}
+
+.space-between{
   justify-content: space-between;
 }
 
+.align-center {
+  align-items: center;
+}
+
 .column-header{
-  font-size: 14px;
+  font-size: 11px;
 }
 
 .row-title{
-  font-size: 10px;
+  font-size: 9px;
+}
+
+.stock-column{
+  width: 175px;
+  align-items: start;
+  margin: 0 10px;
+}
+
+/* Elements */
+hr{
+  border: 0;
+  border-top: 1px solid grey;
+}
+
+h6, p, h2, hr{
+  margin: 0;
 }
