--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,103 @@
 :root {
+  /* Premade stuff */
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: var(--background-primary);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  max-width: 1280px;
+  margin: 0 auto;
+
+  /* Background Colors */
+  --background-primary: #1a1a1a;
+  --background-secondary: #252525;
+
+  /* Text Colors */
+  --text-primary: #ffffff;
+  --text-secondary: #c0c0c0;
+
+  /* Accent Colors */
+  --accent-primary: #9c27b0; /* Purplish */
+  --accent-secondary: #673ab7; /* Deeper Purplish */
+
+  /* Border and Divider Colors */
+  --border-color: #333333;
+  --divider-color: #444444;
+
+  /* Button Colors */
+  --button-primary-bg: var(--accent-primary);
+  --button-primary-text: #ffffff;
+  --button-secondary-bg: var(--accent-secondary);
+  --button-secondary-text: #ffffff;
+
+  /* Input Colors */
+  --input-background: #333333;
+  --input-text: #ffffff;
+  --input-placeholder: #999999;
+}
+
+/* Classes */
+.full-width-card {
+  background-color: var(--background-secondary);
+  border-style: solid;
+  border-width: 0px;
+  border-radius: 12px;
+  margin: 20px;
+  padding: 10px;
+}
+
+.horizontal-items {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.text-center{
+  text-align: center;
+}
+
+.space-between{
+  justify-content: space-between;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.column-header{
+  font-size: 11px;
+}
+
+.row-title{
+  font-size: 9px;
+  color: var(--divider-color);
+}
+
+.row-value{
+  font-size: 9px;
+}
+
+.stock-column{
+  width: 175px;
+  align-items: start;
+  margin: 0 10px;
+}
+
+/* Elements */
+hr{
+  border: 0;
+  border-top: 1px solid var(--divider-color);
+}
+
+h6, p, h2, hr{
+  margin: 0;
 }
